Se agregó login con passport (Con Jwt) y se encriptaron claves con bycript
